--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
     		display: none;
     	}
 
+        body
+        {
+            background-color: #EEEEEE;
+        }
      
         @media screen
         {
@@ -57,6 +61,17 @@
 
         @media print {
             .page-break { display: block; page-break-before: always; }
+        }
+
+        span.syllable
+        {
+            color:white;
+        }
+
+        .guess.image 
+        {
+            background-color: #333;
+            text-align: center;
         }
 
         footer.footer {
