--- a/index.html
+++ b/index.html
@@ -39,6 +39,23 @@
     		display: none;
     	}
 
+        .answer-bar
+        {
+            margin-top:20px;
+            text-align: center;
+        }
+
+        .answer-option
+        {
+            text-align: center;;
+        }
+
+        .answer-bar input
+        {
+            width:50%;
+        }
+        
+
         body
         {
             background-color: #EEEEEE;
