--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html xmlns:ng="http://angularjs.org" id="ng-app" ng-app="taicome">
 <head>
+    <title>ทายคำนะจ๊ะ</title>
     <script type="text/javascript" src="lib/jquery.min.js"></script>
 
    <link href="lib/bootstrap/css/bootstrap.css" type="text/css" rel="stylesheet"/>
@@ -130,6 +131,12 @@
             height: auto; min-height: 100%;
 
         }
+
+        .social
+        {
+            padding-top: 50px;
+            text-align: center;;
+        }
         
     </style>
 </head>
@@ -146,7 +153,9 @@
     <div id="bodyWrapper">
 	   <div ng-view></div>
         <div class="social">
-            <div class="fb-like" data-href="http://picnii.me/taicome" data-width="450" data-layout="box_count" data-show-faces="true" data-send="false"></div>
+            <div class="fb-like" data-href="http://picnii.me/taicome" data-width="450" data-layout="button_count" data-show-faces="false" data-send="false"></div>
+            <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://picnii.me/taicome" data-text="ทายคำ" data-hashtags="taicome">Tweet</a>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
         </div>
     </div>
 
