Add Random Question Service

--- a/index.html
+++ b/index.html
@@ -202,7 +202,8 @@
         <nav class="navbar navbar-inverse">
       <div class="navbar-inner">
         <ul class="nav">
-          <li id="home-li"><a href="#">เล่น</a></li>
+          <li id="home-li"><a href="#/random">เล่น</a></li>
+          <li id="level-li"><a href="#">เล่นตลุยด่าน</a></li>
           <li id="share-li"><a href="#/share/create">ส่งมุข</a></li>
         </ul>
       </div>
