--- a/index.html
+++ b/index.html
@@ -186,6 +186,16 @@
             font-size: 55px;
             padding-bottom: 15px;
         }
+
+        #random-section .share.btn,  #share-section .random.btn
+        {
+          display: none;
+        }
+
+        #random-section .random.btn, #share-section .share.btn
+        {
+          display: inline;
+        }
     </style>
 </head>
 <body>
@@ -248,8 +258,8 @@
         <nav class="navbar navbar-inverse">
       <div class="navbar-inner">
         <ul class="nav">
-          <li id="home-li"><a href="#/random">เล่น</a></li>
           <li id="level-li"><a href="#">เล่นตลุยด่าน</a></li>
+          <li id="home-li"><a href="#/random">เล่นมุขจากทางบ้าน</a></li>
           <li id="share-li"><a href="#/share/create">ส่งมุข</a></li>
         </ul>
       </div>
@@ -265,7 +275,7 @@
     </div>
 
     <footer class="footer">
-        ภาพทั้งหมดนำมาจาก Google Search พัฒนาโดย <a href="http://picnii.me">Picnii และ นักเรียน</a> 
+        ภาพทั้งหมดนำมาจาก Google Search พัฒนาโดยทีมงาน <a href="https://www.facebook.com/taicome">taicome.com</a> 
     </footer>
 </body>
 
