--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <script type="text/javascript" src="lib/jquery.min.js"></script>
 
    <link href="lib/bootstrap/css/bootstrap.css" type="text/css" rel="stylesheet"/>
-   <link href="fonts/asg_matrathan/stylesheet.css" type="text/css" rel="stylesheet"/>
+   <link href="fonts/web_banga/stylesheet.css" type="text/css" rel="stylesheet"/>
     <!--[if lte IE 8]>
       <script type="text/javascript/json-master/json2.js" src="lib/json-master/json2.js"></script>
     <![endif]-->
@@ -178,12 +178,12 @@
 
         .logo
         {
-            font-family: asg_matrathan_lightregular;
+            font-family: web_banga;
         }
 
         h1.logo
         {
-            font-size: 55px;
+            font-size: 50px;
             padding-bottom: 15px;
         }
 
@@ -271,12 +271,21 @@
             <div class="fb-like" data-href="http://taicome.com" data-width="450" data-layout="button_count" data-show-faces="true" data-send="false"></div>
             <a href="https://twitter.com/share" class="twitter-share-button" data-url="taicome.com" data-text="ทายคำ" data-hashtags="taicome">Tweet</a>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+
         </div>
     </div>
 
     <footer class="footer">
         ภาพทั้งหมดนำมาจาก Google Search พัฒนาโดยทีมงาน <a href="https://www.facebook.com/taicome">taicome.com</a> 
     </footer>
+    <audio id="fail-sound" controls class="hide">
+      <source src="sounds/tea_for_-xrikazen-7426_hifi.mp3" type="audio/mpeg">
+    Your browser does not support the audio element.
+    </audio>
+    <audio id="pass-sound" controls class="hide">
+      <source src="sounds/polish-xrikazen-7425_hifi.mp3" type="audio/mpeg">
+    Your browser does not support the audio element.
+    </audio>
 </body>
 
 </html>
