--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 	
     <script type="text/javascript" src="lib/angular-resource.min.js"></script>
 
- 
+  <script src="lib/angulartics/angulartics.js"></script>
+  <script src="lib/angulartics/angulartics-google-analytics.js"></script>
   
 	<meta charset="utf-8"> 
     <script type="text/javascript" src="js/app.js"></script>
@@ -23,7 +24,17 @@
     
      <script type="text/javascript" src="js/init.js"></script>
       <script type="text/javascript" src="js/Controller.js"></script>
-   
+      
+      <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-44253633-1', 'taicome.com');
+
+</script>
+
       <!--[if lte IE 8]>
       <script>
         document.createElement('ng-include');
@@ -276,7 +287,8 @@
     </div>
 
     <footer class="footer">
-        ภาพทั้งหมดนำมาจาก Google Search พัฒนาโดยทีมงาน <a href="https://www.facebook.com/taicome">taicome.com</a> 
+        ภาพทั้งหมดนำมาจาก Google Search พัฒนาโดยทีมงาน <a href="https://www.facebook.com/taicome">ทายคำ</a>
+
     </footer>
     <audio id="fail-sound" controls class="hide">
       <source src="sounds/tea_for_-xrikazen-7426_hifi.mp3" type="audio/mpeg">
